Added image to webpage

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h2>Your Name Here</h2>
         <p>Hello! My name is Antoine Stewart. I am interested in web development because I enjoy building creative and interactive websites. 
            I want to learn how to make professional, responsive, and useful applications that people can benefit from.</p>
+        <img src="img.png" alt="Picture of dog">
     </main>
     <footer>
         <p>Copyright &copy; 2020 Antoine Stewart.</p>
